syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.services.LexingCoFactory";
option java_outer_classname = "LexingCoFactoryServiceImpl";

package LexingCo;

service LexingCoFactoryService{
  rpc buildCar(BuildRequest) returns (BuildReply){}
  rpc repairCar(RepairRequest) returns (RepairReply){}
}

message BuildRequest{
  string text = 1;
}

message BuildReply{
  string text = 2;
}

message RepairRequest{
  string text = 3;
}

message RepairReply{
  string text = 4;
}